refactor: remove unused convert